[package]
name = "nos-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "nos-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
rng = "0.1.0"
scraper = "0.23.1"
termion = "4.0.5"
textwrap = "0.16.2"
